WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192797
Tap highlights should not be shown on iOSMac
https://bugs.webkit.org/show_bug.cgi?id=192797
Summary
Tap highlights should not be shown on iOSMac
Wenson Hsieh
Reported
2018-12-17 20:47:36 PST
<
rdar://problem/46793995
>
Attachments
Patch
(1.95 KB, patch)
2018-12-17 21:30 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-12-17 21:30:49 PST
Created
attachment 357533
[details]
Patch
WebKit Commit Bot
Comment 2
2018-12-17 22:30:42 PST
Comment on
attachment 357533
[details]
Patch Clearing flags on attachment: 357533 Committed
r239321
: <
https://trac.webkit.org/changeset/239321
>
WebKit Commit Bot
Comment 3
2018-12-17 22:30:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug