Tap highlights should not be shown on iOSMac https://bugs.webkit.org/show_bug.cgi?id=192797 <rdar://problem/46793995>

Reviewed by Tim Horton.

WKWebViews in iOSMac should avoid painting tap highlights, since tap highlights are not present in the rest of
the macOS platform. Simply disable this functionality by bailing in `-[WKContentView _showTapHighlight]`.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _showTapHighlight]):


Canonical link: https://commits.webkit.org/207368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239321 268f45cc-cd09-0410-ab3c-d52691b4dbfc